examples/usp/config/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: custom-envoy-proxy
  listeners:
    - name: eg-test.local-11080
      protocol: HTTP
      port: 11080
      hostname: "eg-test.local"
    - name: eg-test.local-11443
      protocol: HTTPS
      port: 11443
      hostname: "eg-test.local"
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-cert-secret
            kind: Secret
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: gw
      sectionName: "eg-test.local-11080"
      port: 11080
    - name: gw
      sectionName: "eg-test.local-11443"
      port: 11443
  rules:
    - backendRefs:
        - group: "gateway.envoyproxy.io"
          kind: Backend
          name: backend
      matches:
        - path:
            type: PathPrefix
            value: /
